--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,9 +9,9 @@ phases:
   build:
     commands:
       - pip install cfn-lint
-      #- aws cloudformation package --template-file template.yaml --s3-bucket ${PACKAGE_BUCKET} --output-template-file packaged-template.yaml
-      - sam build
-      - sam package --template-file template.yml --s3-bucket ${PACKAGE_BUCKET} --output-template-file packaged-template.yml
+      - aws cloudformation package --template-file template.yaml --s3-bucket ${PACKAGE_BUCKET} --output-template-file packaged-template.yaml
+      #- sam build
+      #- sam package --template-file template.yml --s3-bucket ${PACKAGE_BUCKET} --output-template-file packaged-template.yml
       #- sam deploy --template-file packaged-template.yml --stack-name social-media-dashboard
 artifacts:
   files:
