--- a/nested-stack/elasticsearch.yaml
+++ b/nested-stack/elasticsearch.yaml
@@ -364,7 +364,8 @@ Resources:
     Version: 1.0
     Properties:
       ServiceToken: !GetAtt ElasticsearchResourceFunction.Arn
-      URL: !Sub 'https://${Elasticsearch.DomainEndpoint}/_opendistro/_security/api/rolesmapping/kibana_user'
+      Host: !GetAtt Elasticsearch.DomainEndpoint
+      Path: _opendistro/_security/api/rolesmapping/kibana_user
       Body: !Sub |
         {
           "backend_roles" : [
@@ -377,7 +378,8 @@ Resources:
     Version: 1.0
     Properties:
       ServiceToken: !GetAtt ElasticsearchResourceFunction.Arn
-      URL: !Sub 'https://${Elasticsearch.DomainEndpoint}/_template/tweets'
+      Host: !GetAtt Elasticsearch.DomainEndpoint
+      Path: _template/tweets
       Body: '
         {
           "index_patterns": ["tweets-*"],
@@ -681,6 +683,7 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       Description: '[Custom Resource] Modify elasticsearch resources'
+      Timeout: 300
       Runtime: python3.7
       Role: !GetAtt KibanaMasterRole.Arn
       Layers: 
@@ -697,6 +700,7 @@ Resources:
           import os
           import requests
           from requests_aws4auth import AWS4Auth
+          from time import sleep
 
           try:
               logger = logging.getLogger(__name__)
@@ -715,20 +719,29 @@ Resources:
           @helper.create
           @helper.update
           def create(event, context):
-              url = event['ResourceProperties']['URL']
+              host = event['ResourceProperties']['Host']
+              path = event['ResourceProperties']['Path']
               body = json.loads(event['ResourceProperties']['Body'])
-              res = requests.put(url, auth=awsauth, json=body)
-              if res.status_code in [200, 201]:
-                  logger.info(res.text)
-              else:
-                  logger.error(res.text)
-                  raise ValueError(res.text)
+              url = f'https://{host}/{path}'
+              while True:
+                  res = requests.put(url, auth=awsauth, json=body)
+                  if res.status_code in [200, 201]:
+                      logger.info(res.text)
+                      break
+                  elif res.status_code == 401:
+                      logger.warning(res.text)
+                      sleep(20)
+                  else:
+                      logger.error(res.text)
+                      raise ValueError(res.text)
               physical_resource_id = url
               return physical_resource_id
 
           @helper.delete
           def delete(event, context):
-              url = event['PhysicalResourceId']
+              host = event['ResourceProperties']['Host']
+              path = event['ResourceProperties']['Path']
+              url = f'https://{host}/{path}'
               try:
                   res = requests.delete(url, auth=awsauth)
                   logger.info(res.text)
