retweet間の親子関係を追加

--- a/nested-stack/elasticsearch.yaml
+++ b/nested-stack/elasticsearch.yaml
@@ -543,6 +543,12 @@ Resources:
                     "type": "keyword"
                   }
                 }
+              },
+              "retweeted_status": {
+                "type": "join",
+                "relations": {
+                  "original": "retweet"
+                }
               }
             }
           }
