--- a/template.yaml
+++ b/template.yaml
@@ -221,6 +221,7 @@ Resources:
         Variables:
           LOG_LEVEL: INFO
           LIVE_METRICS: enabled
+          TWEET_DAY_THRESHOLD: 180
           COMPREHEND_ENTITY_SCORE_THRESHOLD: !Ref ComprehendEntityScoreThreshold
           INDEXING_STREAM: !Ref IndexingStream
       Events:
@@ -266,6 +267,7 @@ Resources:
         Variables:
           LOG_LEVEL: INFO
           LIVE_METRICS: disabled
+          TWEET_DAY_THRESHOLD: 730
           COMPREHEND_ENTITY_SCORE_THRESHOLD: !Ref ComprehendEntityScoreThreshold
           INDEXING_STREAM: !Ref IndexingStream
       Events:
